feat: attendance impl completed
